2008-03-20  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-browse-html-article): Inhibit display of
	X-Boundary header.

	* message.el (message-simplify-recipients): Fix previous commit.

2008-03-19  Glenn Morris  <rgm@gnu.org>

	* tls.el (open-tls-stream): Restore use of `tls-end-of-info'.
	Accidentally removed in the sync process with Emacs.

2008-03-19  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el (message-alter-recipients-discard-bogus-full-name): New
	function.
	(message-alter-recipients-function): New variable.
	(message-get-reply-headers): Use it.
	(message-replace-header): New helper function.
	(message-recipients-without-full-name): New variable.
	(message-simplify-recipients): New command.

	* mml.el (mml-menu): Add toggle for gnus-gcc-externalize-attachments.

	* message.el (message-info): Handle EasyPG manual.

	* mml.el (mml-menu): Add entry for EasyPG.

2008-03-18  Nils Ackermann  <nils@ackermath.info>  (tiny change)

	* nnmh.el (nnmh-request-expire-articles): Prefer expiry-target group
	parameter.

	* message.el (message-disassociate-draft): Specify drafts group name
	fully.

2008-03-17  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-registry.el (gnus-registry-split-fancy-with-parent): Eliminate
	unnecessary duplicates from the match list.

2008-03-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* dgnushack.el: Autoload Info-index and Info-index-next for XEmacs.

	* lpath.el: Fbind Info-index and Info-index-next for Emacs 21, 22.

	* gnus-art.el (gnus-button-handle-info-keystrokes): Don't use optional
	args of `how-many' of which the XEmacs version doesn't take; declare
	Info-index-next as function.

2008-03-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-score.el (gnus-score-headers): Fix handling of
	gnus-inhibit-slow-scoring.

	* gnus-art.el (gnus-article-browse-html-article): Fix type in doc
	string.
	(gnus-button-url-regexp): Improve handling of parenthesis.
	(gnus-button-alist): Extend gnus-button-handle-info-keystrokes entry.