@@ -1,5 +1,7 @@
 2008-03-20  Reiner Steib  <Reiner.Steib@gmx.de>
 
+	* mml.el (mml-menu): Add workarounds for XEmacs.
+
 	* gnus-art.el (gnus-article-browse-html-article): Inhibit display of
 	X-Boundary header.
 
